# compilers

grammar/: Cargo.toml  README.md
grammar/example/: example1-1.txt  example1-2.txt  example2-1.txt  example3-1.txt  example3.txt  not-grammar.txt
grammar/src/: main.rs
lexer/: .gitignore  1.c  Cargo.toml  coverage.sh
lexer/src/: ast.rs  error.rs  lexer.rs  main.rs  persist.rs  preprocess.rs  token.rs
lexer/testcase/: 2.txt  3.txt
lexer/testcase/block-comment/: 3-ans.c  3.c
lexer/testcase/block-comment/nested/: 1-ans.txt
lexer/testcase/c/: 1.c
lexer/testcase/comment/block/: 3-ans.c
lexer/testcase/comment/line/: 3.c
lexer/testcase/comment/mix/: 1.txt  3-ans.txt  3.txt
lexer/testcase/comment/unterminated/: 3.txt
lexer/testcase/line-comment/: 4-ans.c  4.c  7.c
lexer/testcase/token/: 1.token.in  2.token.in  3.id.in  3.token.in  4.in  4.token.in  5.id.in  5.text.in  5.token.in  6.in  6.token.in
minic/: Cargo.toml
minic/src/: ast.rs  error.rs  lexer.rs  main.rs  parser.rs  persist.rs  preprocess.rs  token.rs  util.rs
minic/testcase/c/: 1.c  1.lexeroutput.txt  2.c  2.c.json  2.lexeroutput.txt  3.c  4.c
minic/testcase/comment/block/: 4-ans.c  4.c
minic/testcase/comment/block/nested/: 1-ans.txt
minic/testcase/comment/line/: 5.c  8.c
minic/testcase/comment/mix/: 1-ans.txt
minic/testcase/token/: 1.id.in  1.token.in  2.id.in  2.token.in  3.in  3.token.in  4.id.in  5.in  5.token.in  6.id.in  6.text.in  6.token.in
