[package]
name = "lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.37"
indenter = "0.3.3"
colored = "2.0.0"
anyhow = "1.0.66"
maplit = "1.0.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
test-case = "2.2.2"

